--- a/app/src/main/res/layout/card_advert.xml
+++ b/app/src/main/res/layout/card_advert.xml
@@ -17,15 +17,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" >
 
             <TextView
                 android:id="@+id/advert_website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
+                android:layout_marginStart="6dp"
                 android:text="website.com"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:text="Torcy"
                 android:textAlignment="textStart"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/advert_img_card_view" />
 
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="99 999 €"
                 android:textAlignment="textEnd"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/blue_default"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +81,7 @@
                 android:layout_marginTop="6dp"
                 android:text="8 pièces"
                 android:textAlignment="textStart"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/advert_price" />
 
@@ -93,7 +93,7 @@
                 android:layout_marginBottom="14dp"
                 android:text="6 chambres"
                 android:textAlignment="textStart"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/advert_area"
                 app:layout_constraintStart_toEndOf="@+id/advert_rooms"
                 app:layout_constraintTop_toBottomOf="@+id/advert_price" />
@@ -106,11 +106,31 @@
                 android:layout_marginEnd="90dp"
                 android:text="100m2"
                 android:textAlignment="textStart"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/advert_price" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <RelativeLayout
+        android:id="@+id/advert_like_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <ImageView
+            android:id="@+id/advert_like_img"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/favorite_white_18dp" />
+
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
