--- a/app/src/main/res/layout/fragment_criterias.xml
+++ b/app/src/main/res/layout/fragment_criterias.xml
@@ -151,7 +151,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="number"
-        android:text="Nb de pièces"
+        android:hint="Nb de pièces"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postal_code" />
