--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/main_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/activity_main_bottom_navigation" />
+        android:layout_above="@id/activity_main_bottom_navigation"
+        android:layout_marginBottom="20dp" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
