--- a/app/src/main/res/layout/card_advert.xml
+++ b/app/src/main/res/layout/card_advert.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/advert_card"
         android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
